--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1>Working</h1>
-<p>Working...</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IVIKEE7</title>
+</head>
+<body>
+    <h1>It's Working</h1>
+</body>
+</html>
