--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ivikee7</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style type="text/tailwindcss">
+        @layer utilities {
+      .content-auto {
+        content-visibility: auto;
+      }
+    }
+  </style>
+  <head>ivikee7</head>
 </head>
+
 <body>
-    
+    <div class="lg:content-auto">
+        <!-- ... -->
+    </div>
 </body>
+
 </html>
