--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
                             src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
                             alt="">
                         <div class="mt-4 flex items-center justify-center space-x-3 text-base">
-                            <div class="font-semibold text-gray-900">Judith Black</div>
+                            <div class="font-semibold text-gray-900">Vikee Kumar</div>
                             <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
                                 <circle cx="1" cy="1" r="1" />
                             </svg>
-                            <div class="text-gray-600">CEO of Workcation</div>
+                            <div class="text-gray-600">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
                         </div>
                     </figcaption>
-                    <img class="mx-auto h-12" src="https://tailwindui.com/img/logos/workcation-logo-indigo-600.svg" alt="">
                     <blockquote
                         class="text-center text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
                         <p>“Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa
