--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                             </svg>
                             <div class="text-gray-600">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
                         </div>
+                        <div class="mt-4 flex items-center justify-center space-x-3 text-base">
+                            <div class="font-semibold text-gray-900">Vikee Kumar</div>
+                        </div>
+                        <div class="mt-4 flex items-center justify-center space-x-3 text-base">
+                            <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
+                                <circle cx="1" cy="1" r="1" />
+                            </svg>
+                            <div class="text-gray-600">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
+                        </div>
                     </figcaption>
                     <blockquote
                         class="text-center text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
