--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <figure class="mt-10">
                     <figcaption class="mt-10">
                         <img class="mx-auto h-10 w-10 rounded-full"
-                            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                            src="https://avatars.githubusercontent.com/u/80277577?v=4"
                             alt="">
                         <div class="mt-4 flex items-center justify-center space-x-3 text-base">
                             <div class="font-semibold text-gray-900">Vikee Kumar</div>
