--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <img class="mx-auto h-10 w-10 rounded-full"
                             src="https://avatars.githubusercontent.com/u/80277577?v=4"
                             alt="">
-                        <div class="mt-4 flex items-center space-x-3 text-base">
+                        <div class="mt-4 items-center justify-center space-x-3 text-base">
                             <div class="font-semibold text-gray-900">Vikee Kumar</div>
                             <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
                                 <circle cx="1" cy="1" r="1" />
