--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                             src="https://avatars.githubusercontent.com/u/80277577?v=4"
                             alt="">
                         <div class="mt-4 items-center justify-center space-x-3 text-base">
-                            <div class="font-semibold text-gray-900">Vikee Kumar</div>
-                            <div class="text-gray-600">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
+                            <div class="flex font-semibold text-gray-900">Vikee Kumar</div>
+                            <div class="flex text-gray-600">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
                         </div>
                         <div class="mt-4 flex items-center justify-center space-x-3 text-base">
                             <div class="font-semibold text-gray-900">Vikee Kumar</div>
