--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                             <div class="text-center text-gray-600">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
                         </div>
                     </figcaption>
-                    <blockquote
+                    <!-- <blockquote
                         class="text-center text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
                         <p>“Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa
                             sapiente alias molestiae. Numquam corrupti in laborum sed rerum et corporis.”</p>
-                    </blockquote>
+                    </blockquote> -->
                 </figure>
             </div>
         </section>
