--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             <div class="mx-auto max-w-2xl lg:max-w-4xl">
                 <figure class="mt-10">
                     <figcaption class="mt-10">
-                        <img class="mx-auto h-100 w-100 rounded-full"
-                            src="https://avatars.githubusercontent.com/u/80277577?v=4"
-                            alt="">
+                        <img class="mx-auto h-50 w-50 rounded-full"
+                            src="https://avatars.githubusercontent.com/u/80277577?v=4" alt="">
                         <div class="mt-4 items-center justify-center space-x-3 text-base">
                             <div class="text-center font-semibold text-gray-900">Vikee Kumar</div>
-                            <div class="text-center text-gray-600">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
                         </div>
+                        <div class="items-center text-center">
+                            <a class="font-semibold bg-slate-300 px-6 rounded-full text-gray-900"
+                                href="http://github.com/ivikee7">GitHub</a>
+                        </div>
+                        <div class="text-center">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
                     </figcaption>
                     <!-- <blockquote
                         class="text-center text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
