--- a/index.html
+++ b/index.html
@@ -1,57 +1,13 @@
-<!doctype html>
-<html>
-
-<head>
-    <!-- Adsanse -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8728527704073077"
-        crossorigin="anonymous"></script>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style type="text/tailwindcss">
-        @layer utilities {
-      .content-auto {
-        content-visibility: auto;
-      }
-    }
-  </style>
-    <title>Vikee Kumar</title>
-</head>
-
-<body>
-    <div class="lg:content-auto">
-        <!-- ... -->
-        <section class="relative isolate overflow-hidden bg-white py-24 px-6 sm:py-32 lg:px-8">
-            <div
-                class="absolute inset-0 -z-10 bg-[radial-gradient(45rem_50rem_at_top,theme(colors.indigo.100),white)] opacity-20">
-            </div>
-            <div
-                class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] bg-white shadow-xl shadow-indigo-600/10 ring-1 ring-indigo-50 sm:mr-28 lg:mr-0 xl:mr-16 xl:origin-center">
-            </div>
-            <div class="mx-auto max-w-2xl lg:max-w-4xl">
-                <figure class="mt-10">
-                    <figcaption class="mt-10">
-                        <img class="mx-auto h-50 w-50 rounded-full"
-                            src="https://avatars.githubusercontent.com/u/80277577?v=4" alt="">
-                        <div class="mt-4 items-center justify-center space-x-3 text-base">
-                            <div class="text-center font-semibold text-gray-900">Vikee Kumar</div>
-                        </div>
-                        <div class="items-center text-center">
-                            <a class="font-semibold bg-slate-300 px-6 rounded-full text-gray-900"
-                                href="http://github.com/ivikee7">GitHub</a>
-                        </div>
-                        <div class="text-center">IT of SHRI RAM CENTENNIAL SCHOOL, Patna</div>
-                    </figcaption>
-                    <!-- <blockquote
-                        class="text-center text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
-                        <p>“Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa
-                            sapiente alias molestiae. Numquam corrupti in laborum sed rerum et corporis.”</p>
-                    </blockquote> -->
-                </figure>
-            </div>
-        </section>
-    </div>
-</body>
-
+    <title>Pages CMS</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
